# parallel-lab4

./: .gitignore  CMakeLists.txt  resources.cpp  resources.h
client/: CMakeLists.txt
client/src/: main.cpp
client/src/communication/: base.cpp  base.h  client.cpp
server/: CMakeLists.txt
server/src/: algorithm.cpp  algorithm.h  main.cpp
server/src/communication/: base.cpp  base.h  server.cpp  server.h  socket_handler.cpp  socket_handler.h
